test/classes/errors/nilability-init-var/init-var-oknil-borrowed-from-oknil-owned.chpl
//  lhs: borrowed?  rhs: owned?  ok

class MyClass {
  var x: int;
}

var rhs: owned MyClass?;

var lhs: borrowed MyClass? = rhs;


